--- a/aup_acceptable_use_policy.html
+++ b/aup_acceptable_use_policy.html
@@ -131,37 +131,114 @@
 <main>
 
 
------------------------------------------------------------TEMPLATE-----------------------------------------------
-  <section>
-  <h2>NEW_TITLE_HERE</h2>
-    </section>
+<section>
+  <h2>Acceptable Use Policy</h2>
+</section>
+<section>
+  <h2>Why is the Acceptable Use Policy (AUP) important?</h2>
+  <p>
+    This policy establishes the rules for anyone who accesses or uses [COMPANY_NAME]'s computers, applications, data, or networks. Everyone is responsible for following these rules to protect themselves, as well as the organization. Failure to follow the practices outlined in this policy can result in serious financial and reputational damage to the organization.
+  </p>
+</section>
+<section>
+  <h2>Who does this policy apply to?</h2>
+  <p>This policy applies to anyone and everyone who interacts with [COMPANY_NAME]’s information systems, including NMC systems. For example, this policy applies to [COMPANY_NAME] and NMC:</p>
+  <ul>
+    <li>Employees</li>
+    <li>Contractors</li>
+    <li>Consultants</li>
+    <li>Temporary employees</li>
+    <li>Internal or external contacts</li>
+    <li>Visitors</li>
+    <li>All roles and levels of the organization</li>
+  </ul>
+</section>
+<section>
+  <h2>Which systems does this policy apply to?</h2>
+  <p>This policy applies to all types of information systems and communications owned or operated by [COMPANY_NAME], Inc., NMC, and any other [COMPANY_NAME] subsidiaries. For example, this policy applies to [COMPANY_NAME] and NMC:</p>
+  <ul>
+    <li>Computers</li>
+    <li>Phones</li>
+    <li>Networks</li>
+    <li>Communications</li>
+    <li>Electronic files and data</li>
+    <li>Mobile phones and devices</li>
+    <li>Internet usage</li>
+    <li>Email</li>
+    <li>Software applications</li>
+  </ul>
+  <p>Be sure to download this policy and refer to it often. Violating this policy can cause serious trouble to you as well as to the organization.</p>
+</section>
+<section>
+  <h2>Rules and Guidelines</h2>
+  <h3>General</h3>
+  <p><strong>Privacy:</strong> [COMPANY_NAME] will monitor all computer and network activities, including but not limited to, email, internet activity, mobile device activity, phone calls, chat messages, etc. No [COMPANY_NAME] employees, nor any other user of [COMPANY_NAME] systems, should make any assumption of privacy when using company systems, applications, or networks.</p>
+  <p><strong>Abuses and violations:</strong> Violating any law, regulation, or security policy, or using or accessing any computer systems in a manner which puts the company’s systems, information, customers, or business interests at risk, either intentionally, or inadvertently through negligent or irresponsible behavior, is strictly prohibited. Circumventing, bypassing, disabling, or in any way weakening the security protections of any company systems is strictly prohibited.</p>
+  <p><strong>Reporting violations:</strong> Employees are required to report any suspected or actual security breaches involving cloud services immediately to the IT department. This includes any unauthorized access, data leakage, or compromise of company information, or violation of company security policy. Employees have a responsibility to immediately report the theft, loss, or unauthorized disclosure of sensitive information, as well as the loss or theft of any physical device containing such information.</p>
+</section>
+<section>
+  <h3>Computer Network</h3>
+  <p><strong>Company-owned devices:</strong> Employees are required to use only company-provided devices for all work-related activities, and for connecting to any company networks, services, or applications. This includes accessing [COMPANY_NAME]-provided cloud applications, applications which employees access directly on the internet, such as Infor CSI and Office 365. This also includes VPN connections, accessing email on iPhones or from laptops. All these types of connections to company resources require the use of company owned laptops, mobile phones, or tablets.</p>
+  <p><strong>Strong passwords:</strong> When accessing [COMPANY_NAME] systems, employees are required to utilize strong passwords. The same password must never be used for more than one application or system. Passwords must be at least 8 characters in length and contain at least one upper-case letter, one lower case letter, and one number or symbol. Passwords must be changed every 90 days.</p>
+  <p><strong>Login with Phone or Token (MFA):</strong> In addition to the use of strong passwords, all users are required to verify their identity with a smartphone app or a hardware token. Email verification is acceptable only if phone or token is not supported. Text or SMS message verification is not an acceptable form of authentication. Employees must never provide their verification code to anyone, not even to IT or to their manager. Employees must never click to accept a phone or token verification prompt which they do not recognize or which they did not intentionally initiate, particularly when receiving numerous unexpected prompts (MFA fatigue). Employees must lock or protect their token, badge or smartphone when unattended to prevent unauthorized persons from using them to gain access to facilities or systems.</p>
+  <p><strong>Password storage:</strong> All passwords must be stored only in the company approved password management application. Storing passwords in Excel sheets, sticky notes, documents, or in any other locations or systems which are not authorized for such purpose is prohibited.</p>
+  <p><strong>Unauthorized software:</strong> Introduction, installation, or usage of any unauthorized, unlicensed, or risky software is strictly prohibited.</p>
+  <p><strong>Password secrecy:</strong> Revealing your account password to others or allowing use of your account by others is prohibited. Even for taking time off or cross training, you may not share your password or your account with any coworkers or manager, even for legitimate business reasons. Contact IT if coworkers need to perform your job duties in your absence.</p>
+  <p><strong>Remote work:</strong> Employees must be approved to access corporate systems remotely based on their job role and duties. Employees requiring remote access must be assigned company devices. Employees working remotely, using company systems in remote locations, or connecting to company applications or data from remote locations must adhere to KHWI 4.8.16 and IT-004 regarding control and usage of company systems while traveling.</p>
+  <p><strong>Unauthorized devices:</strong> Connecting any unauthorized devices such as USB drives, hard drives, storage devices, mobile devices, or wireless devices, to company computers or networks is prohibited. All portable or mobile devices must be owned and approved by [COMPANY_NAME] before connecting to any system.</p>
+  <p><strong>Blogging and social media:</strong> Using [COMPANY_NAME]’s property and systems for social media, blogging, or any digital communication in a manner that violates this Policy, harms [COMPANY_NAME]’s interests, reveals sensitive or restricted information, harms or tarnishes the company image, or violates Non-Discrimination and Anti-Harassment policies, is prohibited.</p>
+</section>
+<section>
+  <h3>Email</h3>
+  <p><strong>Email risk:</strong> The company receives thousands of dangerous emails daily which puts the company at risk of cyber-attacks and financial fraud. Threats such as phishing are the primary method used by criminals to gain access to company systems, and in the vast majority of cases, it’s the employee who clicks and triggers the attack. To protect the company from these risks, employees must learn the skills to detect them, and exercise extreme caution every day, when reading or opening email messages.</p>
+  <p><strong>Training:</strong> All users of corporate email systems are required to complete mandatory training, provided by the company, regarding safe email practices. Management and HR will be informed of any employees who are overdue on training.</p>
+  <p><strong>Employee responsibility:</strong> It is the responsibility of all email users to be skilled at recognizing and avoiding dangerous email threats, and to actively participate in identifying these threats and in protecting the organization. Employees are responsible to inform the IT department if they need additional training on safe email practices, or if they encounter an email which may pose a risk to the organization.</p>
+  <p><strong>Abusive or inappropriate behavior:</strong> Distributing unsolicited email messages, "junk mail", or advertising material to individuals who did not request such content through email. Engaging in any form of harassment via messaging through offensive language. Unauthorized alteration or forging of email.</p>
+</section>
+<section>
+  <h3>Sensitive Information</h3>
+  <p><strong>NMC Mexico:</strong> NMC employs individuals who may not be US persons. Transfer or sharing of technical or financial data with any individual or entity who may not be a “US person” requires training to ensure no regulations or laws will be violated. Contact the Export Control department before transferring information which may relate to any government application. Employees must exercise caution when using email or Teams, or when collaborating with NMC counterparts, to ensure government technical or financial information is not shared accidentally.</p>
+  <p><strong>Legal and regulatory frameworks:</strong> Violations of the rights of any person or company protected by copyright, trade secret, patent or other intellectual property is prohibited. Unauthorized copying of copyrighted material including, but not limited to, digitization and distribution of photographs from magazines, books or other copyrighted sources, copyrighted music, and the installation of any copyrighted software for which [COMPANY_NAME] or the end user does not have an active license is strictly prohibited.</p>
+  <p><strong>Export Control:</strong> Exporting software, technical information, encryption software or technology, in violation of international or regional export control laws is prohibited.</p>
+  <p><strong>Information types:</strong> [COMPANY_NAME] identifies and controls sensitive information in accordance with all applicable laws and regulations. All sensitive information must be handled, marked, and protected in accordance with [COMPANY_NAME]’s Information Control Plan. Employees may access, use, transfer, or share sensitive information only to the extent it is authorized, approved, and necessary to fulfill their assigned job duties. All types of sensitive information are limited in who may access or receive it, and employees must refer to management or the IT department for appropriate authorization. Sensitive information includes but is not limited to:
+  </p>
+  <ul>
+    <li>Proprietary Information (PI)</li>
+    <li>Intellectual Property (IP)</li>
+    <li>Confidential Information (CI)</li>
+    <li>Personally Identifiable Information (PII)</li>
+    <li>Personal Health Information (PHI)</li>
+    <li>Covered Defense Information (CDI)</li>
+    <li>Controlled Unclassified Information (CUI)</li>
+    <li>Federal Contract Information (FCI)</li>
+  </ul>
+</section>
+<section>
+  <h2>Cloud Applications (Internet Hosted Software)</h2>
+  <p>The public internet provides access to countless applications which allow an individual to create an account and begin using the applications, often even for free or for a small monthly payment, without any knowledge or consent by the company’s IT department. This unauthorized or unsanctioned use of public cloud applications is often referred to as “Shadow IT” and poses a major risk to the organization.</p>
+  <p>Cloud applications are online platforms, operated by third-party companies, which can be directly accessed over the public internet, allowing us to use software or store data without installing them on our devices. Examples include [COMPANY_NAME] services like Infor CSI Office 365, and Outlook email. The risk comes from cloud applications which are not sanctioned by [COMPANY_NAME], but which users are able to use regardless because they are publicly accessible over the internet. These unsanctioned internet applications are particularly dangerous because employees can intentionally or unintentionally transfer sensitive company information to them, potentially exposing the organization to legal or financial losses.</p>
+  <h3>IT Approval:</h3>
+  <p>All cloud services must undergo a review and be approved by IT before they are used for company proprietary information, sensitive information, critical business functions, technical data, or any similar sensitive functions.</p>
+  <h3>Prohibited Cloud Usage:</h3>
+  <p>Any applications or services available on the public internet are expressly prohibited from handling any company sensitive or proprietary information unless expressly approved and authorized by the IT Department. File sharing sites like Dropbox.com or Boxx.com may be blocked to prevent transfers of sensitive company information. Communication and messaging sites such as Slack.com and Gmail.com, and personal email accounts of any kind are strictly prohibited because dangerous attachments can be downloaded directly to company computers bypassing all company email filters and firewalls.</p>
+  <h3>ChatGPT and other public AI services:</h3>
+  <p>Publicly accessible AI services offer significant productivity and automation benefits. They also pose very real and unique risks to the organization. It is prohibited to enter any text, prompts, questions, documents, sheets, images, or information of any kind which is not intended for release to the general public. All information entered into these applications is equivalent to releasing the information to the public, and is subject to all regulatory and legal restrictions, as well as company policies regarding sensitive data.</p>
+  <h3>Microsoft Office, Email, Teams:</h3>
+  <p>Microsoft Office 365 provides [COMPANY_NAME] employees with Office applications, email, Teams collaboration, and an expansive list of other applications. The Microsoft cloud platform is authorized to handle all forms of [COMPANY_NAME] sensitive information providing that users exercise caution to ensure that the information is only accessible by authorized personnel. Never share technical or financial information related to any defense customer or contract in any email, Teams chat or group which is accessible by NMC employees who are non-US citizens. Always be aware if camera or microphone are on. Be aware of risk of screen sharing and do not accidentally expose sensitive data. Never accept chat messages from non-[COMPANY_NAME] employees or unidentified persons.</p>
+  <h3>Infor CloudSuite Industrial (ERP):</h3>
+  <p>[Infor CSI is authorized to handle all forms of [COMPANY_NAME] sensitive information]. The application is configured to prevent any unauthorized transfer of information between [COMPANY_NAME] and NMC databases.</p>
+  <h3>Customer Portals/Exostar:</h3>
+  <p>Each customer collaboration portal such as Exostar is governed by its own use policy, terms, and conditions. All users must be approved for access and must understand and comply with the terms and conditions of the portals they use.</p>
+  <h3>GovFTP/ShareTru:</h3>
+  <p>GovFTP (aka ShareTru) is authorized to handle all forms of [COMPANY_NAME] sensitive information. Users must be approved before being granted access and must understand and comply with all regulatory requirements before sharing any technical information with outside parties.</p>
+</section>
+<section>
+  <h2>Violations of Policy</h2>
+  <p><strong>Improper Usage:</strong> Violating any law, regulation, or security policy, or using or accessing any computer systems in a manner which puts the company’s systems, information, customers, or business interests at risk, either intentionally, or inadvertently through negligent or irresponsible behavior, is strictly prohibited.</p>
+  <p><strong>Legal and Regulatory frameworks:</strong> [COMPANY_NAME] computer systems and data are governed and controlled under a broad range of legal and regulatory frameworks. This policy is designed to clarify the policies and procedures necessary for employees to utilize company information systems in a legal and compliant matter.</p>
+  <p><strong>Disciplinary Action:</strong> Violating this policy may result in disciplinary action, up to and including termination and/or criminal prosecution.</p>
+</section>
 
-    <section>
-    <h2>FIRST_SECTION_HEADER</h2>
-    <p>
-      TEXT_HERE
-    </p>
-    <p>
-      TEXT_HERE
-    </p>
-    <img src="picture.png" alt="DESCRIPTION_OF_PICTURE">
-  </section>
-
-  <section>
-    <h2>SECOND_SECTION_HEADER</h2>
-    <p>
-      TEXT_HERE
-    </p>
-        <ul>
-          <li>BULLET_TEXT_HERE.</li>
-          <li>BULLET_TEXT_HERE.</li>
-          <li>BULLET_TEXT_HERE.</li>
-        </ul>
-      </li>
-    <img src="picture.png" alt="DESCRIPTION_OF_PICTURE">
-  </section>
-
-------------------------END TEMPLATE--------------------------------------------------------------
 
     <h2>Contact</h2>
     <p> 
