--- a/aup_acceptable_use_policy.html
+++ b/aup_acceptable_use_policy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NEW_TITLE_HERE</title>
+  <title>Adan Lopez - Sample AUP</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     :root {
@@ -132,7 +132,7 @@
 
 
 <section>
-  <h2>Acceptable Use Policy</h2>
+  <h1>Acceptable Use Policy</h1>
 </section>
 <section>
   <h2>Why is the Acceptable Use Policy (AUP) important?</h2>
