--- a/aup_acceptable_use_policy.html
+++ b/aup_acceptable_use_policy.html
@@ -133,6 +133,8 @@
 
 <section>
   <h1>Acceptable Use Policy</h1>
+  Here's a sample Acceptable Use Policy that I created for a small aerospace firm.
+  <a href="aup_Acceptable Use Policy2.docx">Acceptable Use Policy.docx</a>
 </section>
 <section>
   <h2>Why is the Acceptable Use Policy (AUP) important?</h2>
