--- a/aup_acceptable_use_policy.html
+++ b/aup_acceptable_use_policy.html
@@ -244,8 +244,9 @@
 
     <h2>Contact</h2>
     <p> 
+      📄 <a href="resume-grc.pdf">Resume</a>
       📧 <a href="mailto:heyadanlopez@gmail.com">heyadanlopez@gmail.com</a><br>
-      🌐 <a href="https://linkedin.com/in/yourprofile">LinkedIn</a><br>
+      🌐 <a href="https://www.linkedin.com/in/adan-lopez-76947911/">LinkedIn</a><br>
       📄 <a href="cyber.html">Back to Portfolio</a>
     </p>
   </section>
