--- a/1_template.html
+++ b/1_template.html
@@ -134,6 +134,10 @@
 -----------------------------------------------------------TEMPLATE-----------------------------------------------
   <section>
   <h2>NEW_TITLE_HERE</h2>
+        <p>
+  Here's a sample [TEXT_HERE], thought it migh be helpful for anyone getting started in cyber/GRC. 
+  <a href="FILE_NAME.docx">DOCUMENT_TITLE.docx</a>
+ </p>
     </section>
 
     <section>
