--- a/aup_acceptable_use_policy.html
+++ b/aup_acceptable_use_policy.html
@@ -135,7 +135,8 @@
   <h1>Acceptable Use Policy</h1>
     <p>
   Here's a sample Acceptable Use Policy that I created for a small aerospace firm.
-  <a href="aup_Acceptable Use Policy2.docx">Acceptable Use Policy.docx</a>
+    <p>
+  <a href="aup_Acceptable Use Policy_3.docx">Acceptable Use Policy.docx</a>
  </p>
 </section>
 <section>
