--- a/cyber.html
+++ b/cyber.html
@@ -2,94 +2,134 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Your Name – Cybersecurity Profile</title>
+  <title>NEW_TITLE_HERE</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     :root {
-      --bg: #f9f9f9;
-      --text: #222;
-      --accent: #005bbb;
-      --card-bg: #fff;
-      --font: 'Segoe UI', Roboto, sans-serif;
+      --bg: #ffffff;
+      --text: #1e1e1e;
+      --accent: #007acc;
+      --font-sans: 'Inter', 'Segoe UI', Roboto, sans-serif;
+      --font-mono: 'Fira Mono', monospace;
+      --card-bg: #f5f7fa;
+      --border-color: #e1e4e8;
+      --shadow: rgba(0,0,0,0.05);
+      --radius: 6px;
     }
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Fira+Mono&display=swap');
     body {
       margin: 0;
-      font-family: var(--font);
+      font-family: var(--font-sans);
       background: var(--bg);
       color: var(--text);
-      line-height: 1.6;
+      line-height: 1.5;
+      font-size: 16px;
+      letter-spacing: -0.012em;
     }
     header {
-      background: var(--accent);
-      color: #fff;
-      padding: 2rem 1rem;
+      background: transparent;
+      color: var(--text);
+      padding: 2rem 1rem 1rem 1rem;
       text-align: center;
+      border-bottom: 1px solid var(--border-color);
+    }
+    header img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 2px solid var(--accent);
+      box-shadow: 0 4px 8px var(--shadow);
+      margin-bottom: 0.5rem;
     }
     header h1 {
-      margin: 0;
-      font-size: 2rem;
+      margin: 0.3rem 0 0 0;
+      font-weight: 600;
+      font-size: 1.8rem;
+      color: var(--text);
     }
     header p {
-      margin-top: 0.5rem;
+      margin: 0.2rem 0 1rem 0;
+      font-weight: 400;
       font-size: 1rem;
-      opacity: 0.9;
+      color: #555;
+      letter-spacing: 0.05em;
     }
     main {
-      max-width: 800px;
+      max-width: 720px;
       margin: 2rem auto;
       padding: 0 1rem;
     }
     section {
       background: var(--card-bg);
-      padding: 1.5rem;
-      margin-bottom: 1.5rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+      padding: 1.2rem 1.5rem;
+      margin-bottom: 2rem;
+      border-radius: var(--radius);
+      box-shadow: 0 2px 6px var(--shadow);
     }
     section h2 {
+      font-weight: 600;
+      font-size: 1.1rem;
+      margin-bottom: 1rem;
+      color: #444;
+      border: none;
+      padding-bottom: 0;
+    }
+    p, ul, ol {
+      font-size: 1rem;
+      color: var(--text);
+      line-height: 1.6;
       margin-top: 0;
-      font-size: 1.3rem;
-      color: var(--accent);
     }
     ul {
-      list-style: none;
+      list-style: disc;
+      padding-left: 1.4rem;
+      color: var(--text);
+    }
+    ol {
+      list-style: decimal;
+      padding-left: 1.8rem;
+      color: var(--text);
+    }
+    ul li, ol li {
+      margin-bottom: 0.6rem;
       padding-left: 0;
     }
-    ul li {
-      margin-bottom: 0.5rem;
-      padding-left: 1.2rem;
-      position: relative;
-    }
-    ul li::before {
-      content: "•";
-      color: var(--accent);
-      position: absolute;
-      left: 0;
-    }
-    footer {
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.85rem;
-      color: #666;
+    img {
+      max-width: 100%;
+      height: auto;
+      border-radius: var(--radius);
+      box-shadow: 0 4px 12px var(--shadow);
+      margin-top: 10px;
     }
     a {
       color: var(--accent);
       text-decoration: none;
+      font-weight: 600;
+      transition: text-decoration 0.2s ease;
     }
-    a:hover {
+    a:hover, a:focus {
       text-decoration: underline;
+      outline: none;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem 0;
+      font-size: 0.85rem;
+      color: #888;
+      border-top: 1px solid var(--border-color);
+      font-family: var(--font-mono);
     }
   </style>
 </head>
 <body>
-
 <header>
-  <img src="pic-profile1.jpg" alt="Your Name" style="width:140px;height:140px;border-radius:50%;object-fit:cover;border:4px solid #fff;box-shadow:0 2px 6px rgba(0,0,0,0.2);">
-  <h1>Your Name</h1>
-  <p>Cybersecurity Professional | GRC | CMMC | NIST 800-171</p>
+  <img src="pic-profile1.jpg" alt="Adan Lopez">
+  <h1>Adan Lopez</h1>
+  <p>Cybersecurity | Governance | Risk</p>
 </header>
-  
-  <main>
+<main>
+
     <section>
       <h2>About Me</h2>
       <p>
