--- a/cyber.html
+++ b/cyber.html
@@ -168,21 +168,19 @@
     <!-- Add more projects below as needed -->
   </ul>
 </section>
-
     
     <section>
-      <h2>Contact</h2>
-      <p>
-        📧 <a href="mailto:you@example.com">you@example.com</a><br>
-        🌐 <a href="https://linkedin.com/in/yourprofile">LinkedIn</a><br>
-        📄 <a href="index.html">Back to Portfolio</a>
-      </p>
-    </section>
-  </main>
-
-  <footer>
-    © 2025 Your Name – Cybersecurity Profile
-  </footer>
-
+   <h2>Contact</h2>
+    <p> 
+      📄 <a href="resume-grc.pdf">Resume</a>
+      📧 <a href="mailto:heyadanlopez@gmail.com">heyadanlopez@gmail.com</a><br>
+      🌐 <a href="https://www.linkedin.com/in/adan-lopez-76947911/">LinkedIn</a><br>
+      📄 <a href="cyber.html">Back to Portfolio</a>
+    </p>
+  </section>
+</main>
+<footer>
+  © 2025 Adan Lopez – Cybersecurity Profile
+</footer>
 </body>
 </html>
