--- a/cyber.html
+++ b/cyber.html
@@ -165,6 +165,7 @@
     <li><a href="https://heyadanlopez-a11y.github.io/profiles/riskassess-entra-sso-saml.html">SAML Single Sign-On Risk Assessment for MSP Portal</a></li>
     <li><a href="https://heyadanlopez-a11y.github.io/profiles/risk-assessment-ai-internal.html">Risks of Private Generative AI In the Business</a></li>
     <li><a href="https://heyadanlopez-a11y.github.io/profiles/aup_acceptable_use_policy.html">Sample Acceptable Use Policy (AUP)</a></li>
+    <li><a href="https://heyadanlopez-a11y.github.io/profiles/erp_threat_model.html</a></li>
     <!-- Add more projects below as needed -->
   </ul>
 </section>
