--- a/cyber.html
+++ b/cyber.html
@@ -173,7 +173,7 @@
     <section>
    <h2>Contact</h2>
     <p> 
-      📄 <a href="Resume-Adan Lopez-GRC (1).pdf">Resume</a>
+      📄 <a href="Resume-Adan Lopez-GRC (1).pdf">Resume for Governance Risk & Compliance Management</a>
       📧 <a href="mailto:heyadanlopez@gmail.com">heyadanlopez@gmail.com</a><br>
       🌐 <a href="https://www.linkedin.com/in/adan-lopez-76947911/">LinkedIn</a><br>
       📄 <a href="cyber.html">Back to Portfolio</a>
