--- a/cyber.html
+++ b/cyber.html
@@ -143,10 +143,10 @@
     <section>
       <h2>Core Skills</h2>
       <ul>
-        <li>Governance, Risk, and Compliance (CMMC, NIST, ISO)</li>
+        <li>Governance, Risk, and Compliance (CMMC, NIST, GDPR)</li>
+         <li>Cybersecurity Management, planning, assessments</li>
         <li>Security Operations (SOC, vulnerability management, IR)</li>
         <li>Privileged Access & Identity Management (Entra ID, AD)</li>
-        <li>System Security Planning & Assessment (SSPs, POA&Ms, AOs)</li>
       </ul>
     </section>
 
