--- a/cyber.html
+++ b/cyber.html
@@ -126,7 +126,7 @@
 <header>
   <img src="pic-profile1.jpg" alt="Adan Lopez">
   <h1>Adan Lopez</h1>
-  <p>Cybersecurity | Governance | Risk</p>
+  <p>Cybersecurity | Risk Management | Compliance Frameworks | AI Security</p>
 </header>
 <main>
 
