--- a/cyber.html
+++ b/cyber.html
@@ -131,12 +131,12 @@
 <main>
 
     <section>
-      <h2>About Me</h2>
+      <h2>Common sense and pragmatic approach to cybersecurity..</h2>
       <p>
-        Experienced cybersecurity analyst and compliance specialist with expertise in
-        NIST 800-171, CMMC, and risk management. Skilled in building security programs,
-        restoring compliance for classified systems, and aligning security strategy
-        with business needs.
+        20+ years managing cybersecurity and compliance, strategy and execution. 
+        True risk management starts with intimate knowledge of business drivers and the workflows that power them, and mapping those dependencies to assets. 
+        This is where your treasure is buried. Vulnerability can now be measured in a meaningful and actionable way, along with common sense metrics that the 
+        the business can understand and measure. This process is the compass that guides everything from disaster recovery, to incident response, to auditing.
       </p>
     </section>
 
