--- a/audit_template.html
+++ b/audit_template.html
@@ -131,41 +131,34 @@
 <main>
 
 
------------------------------------------------------------TEMPLATE-----------------------------------------------
-  <section>
-  <h2>NEW_TITLE_HERE</h2>
-        <p>
-  Here's a sample [TEXT_HERE], thought it migh be helpful for anyone getting started in cyber/GRC. 
-  <a href="FILE_NAME.docx">DOCUMENT_TITLE.docx</a>
- </p>
-    </section>
+<section>
+  <h2>Regular Security Audits: A Sample Checklist of Security Controls</h2>
+  <p>
+    Here's a sample auditing checklist and guidance, thought it might be helpful for anyone getting started in cyber/GRC.
+  </p>
+</section>
 
-    <section>
-    <h2>FIRST_SECTION_HEADER</h2>
-    <p>
-      TEXT_HERE
-    </p>
-    <p>
-      TEXT_HERE
-    </p>
-    <img src="picture.png" alt="DESCRIPTION_OF_PICTURE">
-  </section>
+<section>
+  <h2>Introduction</h2>
+  <p>
+    An effective cybersecurity audit schedule is foundational for CMMC compliance and risk reduction. A solid continuous monitoring plan incorporates frequent and systematic reviews of controls such as access management, incident response, vulnerability remediation, backup integrity, and patch management. Selecting appropriate intervals is critical for providing assurance and detecting important events before they become major issues.
+  </p>
+  <p>
+    Try to align your audit schedule of critical controls with asset value, attack surface dynamics, historical incidents, and regulatory requirements. Highly critical systems or those exposed to novel threats may warrant increased review intervals.
+  </p>
+</section>
 
-  <section>
-    <h2>SECOND_SECTION_HEADER</h2>
-    <p>
-      TEXT_HERE
-    </p>
-        <ul>
-          <li>BULLET_TEXT_HERE.</li>
-          <li>BULLET_TEXT_HERE.</li>
-          <li>BULLET_TEXT_HERE.</li>
-        </ul>
-      </li>
-    <img src="picture.png" alt="DESCRIPTION_OF_PICTURE">
-  </section>
+<section>
+  <h2>Audit Frequency</h2>
+  <p>
+    Weekly audits should focus on highly dynamic, high-risk areas such as privileged user activity, remote access logs, vulnerability scan reviews, and incident response ticket closure. These activities enable early detection of security breaches or control lapses before they escalate.
+  </p>
+  <p>
+    Monthly audits are optimal for controls where trends and emerging risks can be detected over a slightly longer timeframe. This includes patch management validation, backup restoration tests, firewall reviews, and EASM/CSPM vulnerability reports. Monthly cadence ensures adequate visibility and time to address any findings between audits without producing excessive operational overhead.
+  </p>
+  <p>
+    Quarterly audits should be reserved for items with more
 
-------------------------END TEMPLATE--------------------------------------------------------------
 
     <h2>Contact</h2>
     <p> 
