--- a/audit_template.html
+++ b/audit_template.html
@@ -135,8 +135,7 @@
 <section>
   <h2>Regular Security Audits: A Sample Checklist</h2>
     <p>
-  Here's a sample [TEXT_HERE], thought it might be helpful for anyone getting started in cyber/GRC.
-  <a href="FILE_NAME.docx">DOCUMENT_TITLE.docx</a>
+ <a href="FILE_NAME.docx">DOCUMENT_TITLE.docx</a>
   </p>
 </section>
 
@@ -157,7 +156,7 @@
       <li>Monthly audits are optimal for controls where trends and emerging risks can be detected over a slightly longer timeframe. This includes patch management validation, backup restoration tests, firewall reviews, and EASM/CSPM vulnerability reports. Monthly cadence ensures adequate visibility and time to address any findings between audits without producing excessive operational overhead.</li>
       <li>Quarterly audits should be reserved for items with more stable risk profiles, such as dormant user account reviews, inventory reconciliation, POA&M reviews, and manual wireless access scans. Quarterly review balances thoroughness with practicality where change is less frequent.</li>
     </ul>
-    <img src="picture.png" alt="DESCRIPTION_OF_PICTURE">
+
 </section>
 
 <section>
@@ -165,6 +164,7 @@
     <p>
   Your checklist doesn’t have to be complicated, in fact the simpler the better. It should give you a simple way to log your activities, track any resulting findings and action items, and regenerate a new checklist each time with out hassle. Here is a very basic Word template as an example.
     </p>
+      <img src="audit_template_screenshot.png" alt="Example Audit Template">
 </section>
 
 <section>
