--- a/audit_template.html
+++ b/audit_template.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NEW_TITLE_HERE</title>
+  <title>Adan Lopez Sample Audit Log</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     :root {
@@ -133,9 +133,8 @@
 
   
 <section>
-  <h2>Regular Security Audits: A Sample Checklist</h2>
+  <h1>Regular Security Audits: A Sample Checklist</h1>
     <p>
- <a href="FILE_NAME.docx">DOCUMENT_TITLE.docx</a>
   </p>
 </section>
 
@@ -163,6 +162,8 @@
   <h2>----Sample Audit Checklist Template-------</h2>
     <p>
   Your checklist doesn’t have to be complicated, in fact the simpler the better. It should give you a simple way to log your activities, track any resulting findings and action items, and regenerate a new checklist each time with out hassle. Here is a very basic Word template as an example.
+        <p>
+          <a href="audit_template_doc.docx">Download Sample Template (Word doc)</a>
     </p>
       <img src="audit_template_screenshot.png" alt="Example Audit Template">
 </section>
