--- a/audit_template.html
+++ b/audit_template.html
@@ -169,7 +169,10 @@
 </section>
 
 <section>
-  <h2>-------Sample Checklist Items----------</h2>
+  <h1>Sample Checklist Items</h1>
+        <p>
+          Here's a good list of audits to start with. Every environment is different, tailor these to capture what matters to you and your business. I mapped these to CMMC controls to support typical aerospace companies dealing with DoD regulations, but there are mapping documents available to map these to ISO 27001, NIST CSF.
+    </p>
 
     <h3>Remote Access Logs (AC.L2-3.1.12)</h3>
     <ul>
