--- a/audit_template.html
+++ b/audit_template.html
@@ -146,7 +146,7 @@
 </section>
 
 <section>
-  <h2>-Audit Frequency-</h2>
+  <h2>Audit Frequency</h2>
     <p>
   Try to align your audit schedule of critical controls with asset value, attack surface dynamics, historical incidents, and regulatory requirements. Highly critical systems or those exposed to novel threats may warrant increased review intervals.
     </p>
@@ -159,7 +159,7 @@
 </section>
 
 <section>
-  <h2>----Sample Audit Checklist Template-------</h2>
+  <h2>Sample Audit Checklist Template</h2>
     <p>
   Your checklist doesn’t have to be complicated, in fact the simpler the better. It should give you a simple way to log your activities, track any resulting findings and action items, and regenerate a new checklist each time with out hassle. Here is a very basic Word template as an example.
         <p>
