--- a/cyber.html
+++ b/cyber.html
@@ -157,6 +157,7 @@
     <li><a href="https://heyadanlopez-a11y.github.io/profiles/risk-assessment-ai-internal.html">Risks of Private Generative AI In the Business</a></li>
     <li><a href="https://heyadanlopez-a11y.github.io/profiles/aup_acceptable_use_policy.html">Sample Acceptable Use Policy (AUP)</a></li>
     <li><a href="https://heyadanlopez-a11y.github.io/profiles/erp_threat_model.html">Threat Modeling Exercise for Cloud ERP</a></li>
+    <li><a href="https://heyadanlopez-a11y.github.io/profiles/audit_template.html">Regular Security Audits: A Sample Checklist</a></li>
     <!-- Add more projects below as needed -->
   </ul>
 </section>
